--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,30 @@
 <% provide :title, t(".home") %>
-<div class="center jumbotron">
-  <h1><%= t ".welcome" %></h1>
-  <h2>
-    <%= t ".intro1" %>
-    <%= link_to t(".intro3"), Settings.url.rails_tutorial_url %>
-    <%= t ".intro2" %>
-  </h2>
-  <%= link_to t(".signupnow"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
-<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"),
-                      Settings.url.rails_homepage_url %>
+
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t ".micropost_feed" %></h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t ".welcome" %></h1>
+    <h2>
+      <%= t ".intro1" %>
+      <%= link_to t(".intro3"), Settings.url.rails_tutorial_url %>
+      <%= t ".intro2" %>
+    </h2>
+    <%= link_to t(".signupnow"), signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+  <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"),
+                        Settings.url.rails_homepage_url %>
+<% end %>
