Upload multiple file

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -247,7 +247,7 @@ input {
     display: block;
     margin-left: 60px;
     img {
-      display: block;
+      display: inline-block;
       padding: 5px 0;
     }
   }
