--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -2,8 +2,10 @@
   <%= link_to gravatar_for(micropost.user, size: Settings.validate.length.length_50), micropost.user %>
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content">
-    <%= micropost.content %>
-    <%= image_tag micropost.display_image if micropost.image.attached? %>
+    <%= micropost.content %> <br>
+    <% micropost.images.each do |image| %>
+      <%= image_tag micropost.display_image(image) %>
+    <% end %>
   </span>
   <span class="timestamp">
     <%= t ".posted" %>
