--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -5,6 +5,6 @@
   </div>
   <%= f.submit t(".post"), class: "btn btn-primary" %>
   <span class="image">
-    <%= f.file_field :image, accept: Settings.micropost.accept_format %>
+    <%= f.file_field :images, :multiple => true, accept: Settings.micropost.accept_format %>
   </span>
 <% end %>
