--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -7,4 +7,7 @@
   <span class="image">
     <%= f.file_field :images, :multiple => true, accept: Settings.micropost.accept_format %>
   </span>
+  <div id="preview"></div>
 <% end %>
+
+<%= javascript_pack_tag "micropost" %>
